welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:31: error: not found: value marquerSol
  	marquerSol()
        ^PictureMono3:35: error: not found: value marquerSol
  	marquerSol()
        ^PictureMono3:39: error: not found: value marquerSol
  	marquerSol()
        ^